<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_icon"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/pro_icon"
        android:title="@string/title_settings" />


    <item
        android:id="@+id/navigation_live_sher"
        android:title="@string/title_live" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/noti_icon"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_sett"
        android:icon="@drawable/sett_icon"
        android:title="@string/title_profile" />



</menu>
