<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".accountScr">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/background2"
        />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/bottomholder"
        >
        <Button
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:id="@+id/aprivacyBtn"
            />

        <TextView
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="|"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:layout_toRightOf="@+id/aprivacyBtn"
            android:id="@+id/separator"
            />

        <Button
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:id="@+id/atermsBtn"
            android:textAllCaps="false"
            android:layout_toRightOf="@+id/separator"
            android:layout_marginLeft="5dp"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottomholder"
        android:layout_marginBottom="15dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/aButtonsHolder"
        android:background="@android:color/transparent"
        >
        <RelativeLayout
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:id="@+id/fbbtnHolder"
            >

            <ImageView
                android:layout_width="260dp"
                android:layout_height="40dp"
                android:src="@drawable/whiteback"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="46dp"
                android:textColor="@android:color/black"
                android:textSize="17sp"
                android:gravity="start"
                android:textAlignment="textStart"
                android:layout_centerVertical="true"
                android:text="Login with Facebook"
                android:id="@+id/loginwfbTxt"
                />
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="2dp"
                android:background="@drawable/fbicon"

                />

            <com.facebook.login.widget.LoginButton
                android:id="@+id/fbBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/transparent"
                android:textColor="@android:color/transparent"
                android:visibility="gone"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:id="@+id/fbbBtn"
                />
        </RelativeLayout>

        <RelativeLayout
                android:layout_width="260dp"
                android:layout_height="40dp"
                android:layout_below="@+id/fbbtnHolder"
                android:layout_marginTop="10dp"
                android:id="@+id/googleBtnHolder"
            >

            <ImageView
                android:layout_width="260dp"
                android:layout_height="40dp"
                android:src="@drawable/whiteback"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="46dp"
                android:textColor="@android:color/black"
                android:textSize="17sp"
                android:gravity="start"
                android:textAlignment="textStart"
                android:layout_centerVertical="true"
                android:text="Login with Google"
                android:id="@+id/loginwgoogleTxt"
                />
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@drawable/googlelogin"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="2dp"
                />

            <com.google.android.gms.common.SignInButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:id="@+id/sign_in_button"
                >

            </com.google.android.gms.common.SignInButton>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:id="@+id/googleBtn"
                android:visibility="gone"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:id="@+id/phoneBtnHolder"
            android:layout_below="@+id/googleBtnHolder"
            android:layout_marginTop="10dp"
            >

            <ImageView
                android:layout_width="260dp"
                android:layout_height="40dp"
                android:src="@drawable/whiteback"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="46dp"
                android:text="Login with Phone"
                android:layout_centerVertical="true"
                android:textAlignment="textStart"
                android:gravity="start"
                android:textColor="@android:color/black"
                android:textSize="17sp"
                android:id="@+id/loginwphoneTxt"
                />
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@drawable/phonelogin"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="2dp"
                />

            <Button
                android:id="@+id/numberloginBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent" />
        </RelativeLayout>


    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginsignup"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/aButtonsHolder"
        android:layout_marginBottom="10dp"
        android:id="@+id/loginSignupHeader"
        />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/loginSignupHeader"
        android:layout_marginBottom="20dp"
        >
        <ImageView
            android:layout_width="104dp"
            android:layout_height="104dp"
            app:srcCompat="@drawable/logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:id="@+id/alogo"
            />
        <ImageView
            android:layout_width="220dp"
            android:layout_height="65dp"
            app:srcCompat="@drawable/namewlogo"
            android:layout_below="@+id/alogo"
            android:layout_centerHorizontal="true"
            android:id="@+id/anameLogo"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/punch_line"
            android:textSize="18sp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/anameLogo"
            android:id="@+id/apunchline"
            android:layout_marginTop="5dp"
            android:textColor="@android:color/white"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/snsloadingScr"
        android:visibility="gone"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/black"
            android:alpha="0.5"
            />

        <RelativeLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            >

            <com.github.ybq.android.spinkit.SpinKitView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/sns_spin_kit"
                style="@style/SpinKitView.CubeGrid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                app:SpinKit_Color="@color/colorNavTxt"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Please wait..."
                android:textSize="12sp"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:layout_below="@+id/sns_spin_kit"
                android:layout_marginTop="1dp"
                android:id="@+id/sns_verifyingLbl"
                />
        </RelativeLayout>
    </RelativeLayout>


</RelativeLayout>